--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
          onload="this.style.display='block'; document.getElementById('sched-error').style.display='none';"
          onerror="this.style.display='none'; document.getElementById('sched-error').style.display='flex';">
     
-    <div class="fixed top-4 right-16 z-50 bg-white/90 text-black px-6 py-3 rounded-full font-bold transform scale-90 transition shadow-lg click-hint pointer-events-none opacity-0 group-hover:opacity-100">
-    <i class="fas fa-book-open mr-2"></i> 點擊閱讀詳細文字導覽
-</div>
+    <div class="absolute top-0 right-16 z-50 bg-white/90 text-black px-6 py-3 rounded-full font-bold transform scale-90 transition shadow-lg click-hint pointer-events-none opacity-0 group-hover:opacity-100">
+        <i class="fas fa-book-open mr-2"></i> 點擊閱讀詳細文字導覽
+    </div>
 </div>
                         
                         <div class="mt-12 pt-8 border-t border-gray-800 text-center text-gray-500 text-sm">
